fix spacing between input field and button inside the form

--- a/src/components/commons/Input.css
+++ b/src/components/commons/Input.css
@@ -1,6 +1,7 @@
 .input-box {
   width: 100%;
   height: fit-content;
+  display: inline-block;
   padding-bottom: 1.5vw;
 }
 
